# sdfpy

./: .gitmodules  CMakeLists.txt  pyproject.toml
.github/workflows/: wheels.yml
src/sdf-py/: __init__.py  loadlib.py
